--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -2,6 +2,14 @@
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
-    -webkit-box-shadow: 0px 5px 15px -3px rgba(0,0,0,0.39); 
-    box-shadow: 0px 5px 15px -3px rgba(0,0,0,0.39);
+    box-shadow: 2px 2px 21px -12px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 2px 2px 21px -12px rgba(0,0,0,0.22);
+    -moz-box-shadow: 2px 2px 21px -12px rgba(0,0,0,0.22);
+    width: 500px;
+}
+
+@media screen and (max-width: 600px) {
+    .section {
+        width: 300px;
+    }
 }
