--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Brygada+1918:ital,wght@1,600&family=Roboto:wght@300;400;500;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,600;8..144,700&family=Roboto:wght@300;400;500;900&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Flex', sans-serif;
   color: #200e32;
 }
 
