Implement the input and display of education

--- a/src/styles/SectionItem.css
+++ b/src/styles/SectionItem.css
@@ -1,6 +1,5 @@
-li {
+#edit-container li {
     display: flex;
-    border-bottom: 2px solid rgb(236, 236, 236);
     padding: 15px;
     border-top: 2px solid rgb(236, 236, 236);
     cursor: pointer;
@@ -8,7 +7,7 @@ li {
     gap: 5px;
 }
 
-li p{
+#edit-container li p{
     font-weight: 500;
     color: #001250;
 }
