--- a/src/styles/ResumePreview.css
+++ b/src/styles/ResumePreview.css
@@ -4,7 +4,6 @@
 }
 
 .col-1 {
-    /* border: 1px solid black; */
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -13,7 +12,6 @@
 }
 
 .col-2 {
-    /* border: 1px solid black; */
     background-color: #FFF;
     border-radius: 20px 0 0 20px;
     margin: 30px 0 30px 10px;
@@ -82,4 +80,30 @@
     display: flex;
     align-items: center;
     gap: 5px;
+}
+
+#preview-container ul {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    gap: 10px;
+}
+
+#preview-container ul li {
+    display: flex;
+    gap: 40px;
+}
+
+#preview-container ul li div {
+    display: flex;
+    flex-direction: column;
+}
+
+#preview-container ul li span{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+#preview-container ul li .dates {
+    width: 110px;
 }
