--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
   gap: 5px;
 }
 
-.form input {
+.form input, .form textarea {
   padding: 5px;
   border-radius: 10px;
   border: 2px solid rgb(170, 170, 170);
@@ -50,8 +50,8 @@
   font-weight: 500;
 }
 
-.form input:focus {
-  outline: 2px solid rgba(236,0,140,1);
+.form input:focus, .form textarea:focus {
+  outline: 2px solid rgba(236,0,140,0.5);
 }
 
 .form .buttons {
