--- a/src/styles/ResumePreview.css
+++ b/src/styles/ResumePreview.css
@@ -113,3 +113,35 @@
 #preview-container ul li .dates {
     width: 110px;
 }
+
+#preview-container .col-1 li{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#preview-container .col-1 li span {
+    color: #FFF;
+    font-weight: 600;
+}
+
+#preview-container .skill-labels {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+#preview-container .skill-label {
+    background-color: #FFF;
+    color: #bb73e0;
+    font-weight: 500;
+    text-align: center;
+    padding: 5px;
+    width: max-content;
+    border-radius: 5px;
+    justify-content: center;
+    font-size: 1.1rem;
+}
+
